modify head of html add meta tag

--- a/editar-dolar.html
+++ b/editar-dolar.html
@@ -6,6 +6,7 @@
     <title>Dolares|editar</title>
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/position.css">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body class="min-h-100 bg-gray-200">
     <div class="md:flex min-h-screen md:align-top">
