--- a/nuevo-tipo-dolar.html
+++ b/nuevo-tipo-dolar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dolar | nuevo Tipo Dolar</title>
     <link rel="stylesheet" href="css/tailwind.min.css">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body class="min-h-100 bg-gray-200">
     <div class="md:flex min-h-screen md:align-top">
