--- a/index.html
+++ b/index.html
@@ -36,17 +36,13 @@
             <h2 class="text-3xl font-light text-center">Dolares</h2>
 
             <div class="flex flex-col mt-10">
-                <select
-                class=" border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                <form id="formulario"><select
+                class=" border rounded py-2 px-12 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                 id="banco"
-                name="banco"
-                >
-                    <option value="">Elige el Banco</option>
-                    <option value="">Todos Los Bancos</option>
-                    <option value="">AFIRME</option>
-                    <option value="">CITIBANAMEX</option>
-
-                </select>
+                name="banco">
+                    <option value="">Elige el Banco</option> </select>
+                    <input class="inline-block px-12 py-2 rounded-full shadow-sm font-medium transition duration-200 ease-in-out transform hover:scale-105 bg-blue-600 hover:bg-blue-200 text-gray-200 hover:text-gray-600 mr-5" type="submit" value="buscar">
+                   </form>
                 <div class="py-2 overflow-x-auto">
                   <div class="align-middle inline-block min-w-full shadow overflow-hidden sm:rounded-lg border-b border-gray-200">
                     <table class="min-w-full">
